--- a/Assets/UI Components/Styles/Styles.uss
+++ b/Assets/UI Components/Styles/Styles.uss
@@ -977,3 +977,37 @@
     border-bottom-right-radius: 50%;
     border-bottom-left-radius: 50%;
 }
+
+.level-up-icon {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 45px;
+    height: 45px;
+    background-image: url("project://database/Assets/Graphics/Sprites/Misc/Level%20Up%20Background.png?fileID=2800000&guid=b51faea7245c1114d91b9a9c2cf61a4e&type=3#Level Up Background");
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
+    border-width: 2px;
+    border-color: rgba(255, 255, 255, 0.2);
+}
+
+#unity-checkmark {
+    border-radius: 5px;
+    border-width: 2px;
+    border-color: rgba(0, 0, 0, 0.2);
+    transition: 0.1s ease all;
+    background-color: rgb(255, 255, 255);
+    cursor: url("project://database/Assets/Synty/InterfaceFantasyWarriorHUD/Sprites/Cursors/SPR_MouseCursor_FantasyWarrior_Pointer_03.png?fileID=2800000&guid=c2beade0712d2fe45918ff0afdece64e&type=3#SPR_MouseCursor_FantasyWarrior_Pointer_03");
+    -unity-font: url("project://database/Assets/Graphics/Fonts/Vecna.ttf?fileID=12800000&guid=3cb0a9ff58895424c8d2920e9eef12f1&type=3#Vecna");
+    -unity-font-definition: url("project://database/Assets/Synty/InterfaceFantasyWarriorHUD/Fonts/Grenze/Grenze-SemiBold.ttf?fileID=12800000&guid=7c97367a93d4cc844a4113ad6cf8d2e0&type=3#Grenze-SemiBold");
+}
+
+#unity-checkmark:hover,
+#unity-checkmark:focus {
+    border-color: rgb(201, 170, 33);
+    background-color: rgb(255, 224, 86);
+    cursor: url("project://database/Assets/Synty/InterfaceFantasyWarriorHUD/Sprites/Cursors/SPR_MouseCursor_FantasyWarrior_Pointer_03.png?fileID=2800000&guid=c2beade0712d2fe45918ff0afdece64e&type=3#SPR_MouseCursor_FantasyWarrior_Pointer_03");
+    -unity-font: url("project://database/Assets/Graphics/Fonts/Vecna.ttf?fileID=12800000&guid=3cb0a9ff58895424c8d2920e9eef12f1&type=3#Vecna");
+    -unity-font-definition: url("project://database/Assets/Synty/InterfaceFantasyWarriorHUD/Fonts/Grenze/Grenze-SemiBold.ttf?fileID=12800000&guid=7c97367a93d4cc844a4113ad6cf8d2e0&type=3#Grenze-SemiBold");
+}
